force-app/main/default/objects/Daily_Job_Report__c/Daily_Job_Report__c.object-meta.xml
<CustomObject>
    <label>דו&quot;ח עבודה יומי</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>דו&quot;ח עבודה יומי</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>דו&quot;ח עבודה יומי</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>