force-app/main/default/objects/Daily_Job_Report__c/fields/Daily_Desk_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Desk_Report__c</fullName>
    <label>סיכום יומי מהדסק</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>