force-app/main/default/objects/Daily_Job_Report__c/fields/Daily_Field_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Field_Report__c</fullName>
    <label>סיכום יומי מהשטח</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>