force-app/main/default/objects/Daily_Job_Report__c/fields/Doctor_on_Duty_work__c.field-meta.xml
<CustomField>
    <fullName>Doctor_on_Duty_work__c</fullName>
    <label>עבודה של רופא תורן</label>
    <length>255</length>
    <type>Text</type>
</CustomField>