force-app/main/default/objects/Daily_Job_Report__c/fields/Incident_Report__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>דו&quot;ח עבודה יומי</relationshipLabel>
    <relationshipName>Daily_Job_Report</relationshipName>
    <type>Lookup</type>
</CustomField>