force-app/main/default/objects/Daily_Job_Report__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>מה התוכניות למחר</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>