force-app/main/default/objects/Daily_Job_Report__c/fields/On_duty_work__c.field-meta.xml
<CustomField>
    <fullName>On_duty_work__c</fullName>
    <label>עבודה של כוננים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>