force-app/main/default/objects/Daily_Job_Report__c/fields/Rescue_work__c.field-meta.xml
<CustomField>
    <fullName>Rescue_work__c</fullName>
    <label>עבודה של מחלצים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>