force-app/main/default/objects/Daily_Job_Report__c/fields/Tools_operation_detail__c.field-meta.xml
<CustomField>
    <fullName>Tools_operation_detail__c</fullName>
    <label>פירוט הפעלת כלים</label>
    <length>255</length>
    <type>Text</type>
</CustomField>