force-app/main/default/objects/Daily_Job_Report__c/fields/Validated_Info__c.field-meta.xml
<CustomField>
    <fullName>Validated_Info__c</fullName>
    <label>מידע מאומת</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>