force-app/main/default/objects/Daily_Job_Report__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <label>תאריך</label>
    <type>Date</type>
</CustomField>