force-app/main/default/objects/Daily_Job_Report__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <label>שעות</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>