force-app/main/default/objects/Daily_Job_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Report__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Daily_Desk_Report__c</columns>
    <columns>On_duty_work__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>